--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,13 @@
         {
             "src":"./index.py",
             "use": "@vercel/python",
-            "config":{"runtime":"python3.12"}
+            "config":{"runtime":"python3.8"}
         }
     ],
     "routes": [
         {
             "src":"/(.*)",
-            "dest":"./index.py"
+            "dest":"/"
         }
     ]
 }
