--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,12 @@
 {
     "version":2,
-
+    "builds": [
+        {
+            "src":"./index.py",
+            "use": "@vercel/python",
+            "config":{"runtime":"python3.8"}
+        }
+    ],
     "routes": [
         {
             "src":"/(.*)",
